[package]
name = "bitvm-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin-script-dsl = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/dsl" }
bitcoin-circle-stark = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/bitcoin-circle-stark", tag = "1.0.0" }
anyhow = "1.0.86"
rand_chacha = "0.3.1"
rand = "0.8.5"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script", tag = "1.0.0" }
bitcoin = "0.32.0"